--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -88,7 +88,7 @@ nav:
       - 基础数据结构: note/基础数据结构.md
     - x86-Assembly:
       - 显卡输出: assembly/显卡输出.md
-      - 寄存器: assemvly/寄存器.md
+      - 寄存器: assembly/寄存器.md
       - 堆栈 : assembly/堆栈.md
     
  
