--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -72,8 +72,7 @@ extra_javascript:
   - javascripts/mathjax.js
   - https://polyfill.io/v3/polyfill.min.js?features=es6
   - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
-
-
+  - https://gcore.jsdelivr.net/npm/katex@0.15.1/dist/katex.min.js
 
 plugins:
   - search
@@ -92,6 +91,10 @@ nav:
     - Fundamentals of Data Structure:
       - Maximum Subsequence Sum Problem: note/最大子列和.md
       - 基础数据结构: note/基础数据结构.md
+    - DIP:
+      - Lab1:灰度图以及亮度调整: DIP/lab1/DIP.md
+      - Lab2:灰度图二值化以及形态学操作: DIP/lab2/lab2.md
+      - Lab3:对数增强可实现以及直方图均衡: DIP/lab3/lab3.md
     - x86-Assembly:
       - 基础指令: assembly/基础指令.md
       - 显卡输出: assembly/显卡输出.md
@@ -101,8 +104,8 @@ nav:
       - 中断: assembly/中断.md
       - 函数: assembly/函数.md
   - Computer Vision :
-   - ML-4360:
-    - Basic Transformations : CV/ML-4369/BS/lec2.md
+    - ML-4360:
+      - Basic Transformations : CV/ML-4360/BS/lec2.md
     
     
  
