--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -126,6 +126,9 @@ nav:
   - Miscellaneous :
     - Ai导 : 
       - 数据降维: AI/pca.md 
+    - 随笔:
+      - Invisible : invisible.md
+      - 大侠 : 大侠.md
       
     
     
