--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -121,6 +121,8 @@ nav:
     - General physics II : 
       - Electrci Charge & Field & Potential: GP/lec1-3/lec1.md
       - Current : GP/current/current.md
+      - The Magnetic Field : GP/mag/mag.md
+      - Electromagnetic Integration : GP/com/com.md
   - Computer Vision :
     - ML-4360:
       - Basic Transformations : CV/ML-4360/BS/lec2.md
