--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -138,11 +138,11 @@ nav:
         - Polarization : GP/Polar/Polarization.md
         - Quantum  : GP/light/quantum light/quantum.md
       - Quantum :
-        matter wave: GP/matter wave/matter.md
+        - matter wave: GP/matter wave/matter.md
     - Probability Theory :
       - 随机变量与分布函数: PT/PT.md
       - Order Statistics : PT/order_stats.pdf
-
+      - 数字特征与特征函数: PT/数字特征与特征函数.md
   - Computer Vision :
     - ML-4360:
       - Basic Transformations : CV/ML-4360/BS/lec2.md
