add Hardware implementation

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -123,6 +123,7 @@ nav:
       - Neural Networks and Deep Learning : AI/net.md
     - 计算机逻辑设计基础:
       - Chapter 6 Register : 计算机逻辑设计基础/Register/register.md
+      - Chapter 7 Digital Hardware Implementation : 计算机逻辑设计基础/DHI/Digital Hardware Implementation.md
     - Mumerical Analysis :
       - Chapter 5 : NA/Chap5/Chap5.md
   - Math & Physics:
