--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -126,7 +126,8 @@ nav:
       - Neural Networks and Deep Learning : AI/net.md
     - 计算机逻辑设计基础:
       - Chapter 6 Register : 计算机逻辑设计基础/Register/register.md
-      - Chapter 7 Digital Hardware Implementation : 计算机逻辑设计基础/DHI/Digital Hardware Implementation.md
+      - Chapter 5 Digital Hardware Implementation : 计算机逻辑设计基础/DHI/Digital Hardware Implementation.md
+      - Chapter 7 Memory Basics : 计算机逻辑设计基础/MB/MB.md
     - Numerical Analysis :
       - Chapter 1 : NA/Chap1/Chap1.md
       - Chapter 2 : NA/Chap2/Chap2.md
@@ -143,7 +144,6 @@ nav:
         - Current : GP/current/current.md
         - The Magnetic Field : GP/mag/mag.md
         - Electromagnetic Integration : GP/com/com.md
-        - Quantum Wells: GP/QW/QW.md
       - Optics:
         - Light Waves : GP/light/light.md
         - interference & refraction: GP/light/inteference.md
@@ -153,6 +153,7 @@ nav:
       - Quantum :
         - matter wave: GP/matter wave/matter.md
         - Schroedinger's Equation : GP/sch/sch.md
+        - Quantum Wells: GP/QW/QW.md
     - Probability Theory :
       - 随机变量与分布函数: PT/PT.md
       - Order Statistics : PT/order_stats.pdf
