--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -145,6 +145,9 @@ nav:
       - Chapter 5 : NA/Chap5/Chap5.md
       - Chapter 6 : NA/Chap6/Chap6.md
       - Chapter 7 : NA/Chap7/Chap7.md
+    - OOP(C++):
+      - Basic: OOP/Basic/Basic.md
+      
   - Math & Physics:
     - General physics II : 
       - Electromagnetics:
