--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,11 +11,20 @@ theme:
   logo: log.ico
   favicon: log.ico
   features:
-    - content.code.annotate
     - navigation.tracking
     - navigation.tabs
+    - navigation.expand
     - navigation.indexes
     - navigation.top
+    - navigation.footer
+    - toc.follow
+    - search.suggest
+    - search.highlight
+    - search.share
+    - header.autohide
+    - content.code.copy
+    - content.code.select
+    - content.code.annotate
   font:
     text: Roboto
     code: Roboto Mono
@@ -36,7 +45,24 @@ theme:
         name: Switch to light mode
 
 
+
 markdown_extensions:
+  - pymdownx.arithmatex:            # mathjax
+      generic: true
+  - pymdownx.highlight:             # syntax highlight
+      anchor_linenums: true
+      line_spans: __span
+      pygments_lang_class: true
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
+  - pymdownx.superfences
+  - pymdownx.tabbed:                # Content tabs
+      alternate_style: true
+  - tables                          # table
+  - def_list                        # lists
+  - pymdownx.tasklist:
+      custom_checkbox: true
+
   - toc:
       permalink: true
       toc_depth: 4
@@ -77,12 +103,9 @@ extra_css:
   - css/flink.css
   - css/more_changelog.css
 extra_javascript:
+  - javascripts/mathjax.js
   - https://polyfill.io/v3/polyfill.min.js?features=es6
   - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
-  - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js
-  - https://gcore.jsdelivr.net/npm/katex@0.15.1/dist/katex.min.js
-  - js/baidu-tongji.js
-  - js/katex.js
 extra:
   social:
     - icon: fontawesome/brands/github
