--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -235,6 +235,8 @@ nav:
       - structure from motion : CV/ML-4360/SFM/lec3.md
       - Stereo Reconstruction : CV/ML-4360/SR/lec4.md
       - Probabilistic Graphical Models: CV/ML-4360/PGM/lec5.md
+      - Shape-From-X : CV/ML-4360/SFX/lec8.md
+      - 
       
   - Miscellaneous : 
     - 随笔:
