--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -46,7 +46,7 @@ theme:
 nav:
   - Home:
     - index.md
-  - Computer Science:
+  - Computer Science(ZJU):
     - Fundamentals of Data Structure:
       - Maximum Subsequence Sum Problem: note/最大子列和.md
       - Basic data Structures I: note/基础数据结构.md
@@ -117,6 +117,9 @@ nav:
       - Chapter 20 : CMU 15-445/Chap20/Chap20.md
       - Chapter 21 : CMU 15-445/Chap21/Chap21.md
       - Chapter 22 : CMU 15-445/Chap22/Chap22.md
+    - Computer Organization : 
+      - Introduction : 计组/Intro/intro.md
+      - Chapter3 : 计组/Chap3/lec.md
   - Math & Physics:
     - General physics II : 
       - Electromagnetics:
@@ -158,6 +161,7 @@ nav:
       - Convolutional Neural Networks: DL_CV/CNN/lec.md
       - Hardware & Software: DL_CV/Pytorch/lec.md
       - Traning Neural Networks: DL_CV/TN/lec.md
+      - Recognision : DL_CV/Recognition/lec10.md
     - Deep Learning(Coursera) :
       - Neural Networks and Deep Learning : DL/Neural Networks and Deep Learning/part1.md
       - Improving Deep Neural Networks : DL/Improving Deep Neural Networks/part2.md
