--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -85,29 +85,32 @@ nav:
     - Anvanced Data Structure:
       - Trees: ADS/Tree/lec.md
       - Heap : ADS/Heap/lec.md
-    - CMU 15-445: 
-      - Chapter 1 : CMU 15-445/Chap1/Chap1.md
-      - Chapter 2 : CMU 15-445/Chap2/Chap2.md
-      - Chapter 3 : CMU 15-445/Chap3/Chap3.md
-      - Chapter 4 : CMU 15-445/Chap4/Chap4.md
-      - Chapter 5 : CMU 15-445/Chap5/Chap5.md
-      - Chapter 6 : CMU 15-445/Chap6/Chap6.md
-      - Chapter 7 : CMU 15-445/Chap7/Chap7.md
-      - Chapter 8 : CMU 15-445/Chap8/Chap8.md
-      - Chapter 9 : CMU 15-445/Chap9/Chap9.md
-      - Chapter 10 : CMU 15-445/Chap10/Chap10.md
-      - Chapter 11 : CMU 15-445/Chap11/Chap11.md
-      - Chapter 12 : CMU 15-445/Chap12/Chap12.md
-      - Chapter 13 : CMU 15-445/Chap13/Chap13.md
-      - Chapter 14 : CMU 15-445/Chap14/Chap14.md
-      - Chapter 15 : CMU 15-445/Chap15/Chap15.md
-      - Chapter 16 : CMU 15-445/Chap16/Chap16.md
-      - Chapter 17 : CMU 15-445/Chap17/Chap17.md
-      - Chapter 18 : CMU 15-445/Chap18/Chap18.md
-      - Chapter 19 : CMU 15-445/Chap19/Chap19.md
-      - Chapter 20 : CMU 15-445/Chap20/Chap20.md
-      - Chapter 21 : CMU 15-445/Chap21/Chap21.md
-      - Chapter 22 : CMU 15-445/Chap22/Chap22.md
+    - Database System: 
+      - Inclass:
+        - SQL : CMU 15-445/Chap2_inclass/lec.md
+      - CMU 15-445:
+        - Chapter 1 : CMU 15-445/Chap1/Chap1.md
+        - Chapter 2 : CMU 15-445/Chap2/Chap2.md
+        - Chapter 3 : CMU 15-445/Chap3/Chap3.md
+        - Chapter 4 : CMU 15-445/Chap4/Chap4.md
+        - Chapter 5 : CMU 15-445/Chap5/Chap5.md
+        - Chapter 6 : CMU 15-445/Chap6/Chap6.md
+        - Chapter 7 : CMU 15-445/Chap7/Chap7.md
+        - Chapter 8 : CMU 15-445/Chap8/Chap8.md
+        - Chapter 9 : CMU 15-445/Chap9/Chap9.md
+        - Chapter 10 : CMU 15-445/Chap10/Chap10.md
+        - Chapter 11 : CMU 15-445/Chap11/Chap11.md
+        - Chapter 12 : CMU 15-445/Chap12/Chap12.md
+        - Chapter 13 : CMU 15-445/Chap13/Chap13.md
+        - Chapter 14 : CMU 15-445/Chap14/Chap14.md
+        - Chapter 15 : CMU 15-445/Chap15/Chap15.md
+        - Chapter 16 : CMU 15-445/Chap16/Chap16.md
+        - Chapter 17 : CMU 15-445/Chap17/Chap17.md
+        - Chapter 18 : CMU 15-445/Chap18/Chap18.md
+        - Chapter 19 : CMU 15-445/Chap19/Chap19.md
+        - Chapter 20 : CMU 15-445/Chap20/Chap20.md
+        - Chapter 21 : CMU 15-445/Chap21/Chap21.md
+        - Chapter 22 : CMU 15-445/Chap22/Chap22.md
     - Computer Organization : 
       - Introduction : 计组/Intro/intro.md
       - Chapter2 : 计组/Chap2/lec.md
