--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -46,6 +46,10 @@ theme:
 nav:
   - Home:
     - index.md
+  - Papers:
+    - NeRF: 
+      - Theory: Papers/NeRF/Theory.md
+      - Implementation: Papers/NeRF/Implementation.md
   - Computer Science(ZJU):
     - Fundamentals of Data Structure:
       - Maximum Subsequence Sum Problem: note/最大子列和.md
