--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -98,6 +98,7 @@ nav:
         - Greedy Algorithm : ADS/greedy/lec.md
         - NP-Completeness: ADS/NP/lec.md
         - Approximation : ADS/approx/lec.md
+        - Randomized Algorithm : ADS/rand/lec.md
     - Database System: 
       - Inclass:
         - SQL : CMU 15-445/Chap2_inclass/lec.md
@@ -112,7 +113,7 @@ nav:
         - Chapter 8 : CMU 15-445/Chap8/Chap8.md
         - Chapter 9 : CMU 15-445/Chap9/Chap9.md
         - Chapter 10 : CMU 15-445/Chap10/Chap10.md
-        - Chapter 11 : CMU 15-445/Chap11/Chap11.md
+        - Chapter 11 : CMU 15-445/Chap11/lec.md
         - Chapter 12 : CMU 15-445/Chap12/Chap12.md
         - Chapter 13 : CMU 15-445/Chap13/Chap13.md
         - Chapter 14 : CMU 15-445/Chap14/Chap14.md
